Update rest api
