# code/app/src/main/java/com/jeferro/products/products/products/domain/models/filter/ProductVersionFilter.java
@@ -7,11 +7,11 @@ import lombok.Getter;
 
 import java.time.Instant;
 
-import static com.jeferro.products.products.products.domain.models.filter.ProductFilterOrder.NAME;
-import static com.jeferro.products.products.products.domain.models.filter.ProductFilterOrder.START_EFFECTIVE_DATE;
+import static com.jeferro.products.products.products.domain.models.filter.ProductVersionOrder.NAME;
+import static com.jeferro.products.products.products.domain.models.filter.ProductVersionOrder.START_EFFECTIVE_DATE;
 
 @Getter
-public class ProductFilter extends Filter<ProductFilterOrder> {
+public class ProductVersionFilter extends Filter<ProductVersionOrder> {
 
     private final String name;
 
@@ -23,9 +23,9 @@ public class ProductFilter extends Filter<ProductFilterOrder> {
 
     private final Instant searchDate;
 
-    public ProductFilter(Integer pageNumber,
+    public ProductVersionFilter(Integer pageNumber,
         Integer pageSize,
-        ProductFilterOrder order,
+        ProductVersionOrder order,
         Boolean ascending,
         String name,
         ProductCode code,
@@ -38,23 +38,23 @@ public class ProductFilter extends Filter<ProductFilterOrder> {
         this.code = code;
         this.minEffectiveDate = minEffectiveDate;
         this.maxEffectiveDate = maxEffectiveDate;
-	  this.searchDate = searchDate;
+	    this.searchDate = searchDate;
 	}
 
-    public static ProductFilter createEmpty() {
-        return new ProductFilter(null, null, NAME, null, null, null, null, null, null);
+    public static ProductVersionFilter createEmpty() {
+        return new ProductVersionFilter(null, null, NAME, null, null, null, null, null, null);
     }
 
-    public static ProductFilter searchName(String name) {
-        return new ProductFilter(null, null, NAME, false, name, null, null, null, null);
+    public static ProductVersionFilter searchName(String name) {
+        return new ProductVersionFilter(null, null, NAME, false, name, null, null, null, null);
     }
 
-    public static ProductFilter previousProduct(ProductVersionId versionId) {
-        return new ProductFilter(0, 1, START_EFFECTIVE_DATE, false, null, versionId.getCode(), null, versionId.getEffectiveDate(), null);
+    public static ProductVersionFilter previousProduct(ProductVersionId versionId) {
+        return new ProductVersionFilter(0, 1, START_EFFECTIVE_DATE, false, null, versionId.getCode(), null, versionId.getEffectiveDate(), null);
     }
 
-    public static ProductFilter nextProduct(ProductVersionId versionId) {
-        return new ProductFilter(0, 1, START_EFFECTIVE_DATE, true, null, versionId.getCode(), versionId.getEffectiveDate(), null, null);
+    public static ProductVersionFilter nextProduct(ProductVersionId versionId) {
+        return new ProductVersionFilter(0, 1, START_EFFECTIVE_DATE, true, null, versionId.getCode(), versionId.getEffectiveDate(), null, null);
     }
 
     public boolean hasName() {
