# code/app/src/main/java/com/jeferro/products/products/products/infrastructure/rest/ProductsRestController.java
@@ -1,33 +1,29 @@
 package com.jeferro.products.products.products.infrastructure.rest;
 
-import com.jeferro.products.generated.rest.v1.apis.ProductsApi;
-import com.jeferro.products.generated.rest.v1.dtos.CreateProductInputRestDTO;
+import com.jeferro.products.generated.rest.v1.apis.ProductVersionsApi;
+import com.jeferro.products.generated.rest.v1.dtos.CreateProductVersionInputRestDTO;
 import com.jeferro.products.generated.rest.v1.dtos.ProductFilterOrderRestDTO;
-import com.jeferro.products.generated.rest.v1.dtos.ProductRestDTO;
-import com.jeferro.products.generated.rest.v1.dtos.ProductSummaryListRestDTO;
-import com.jeferro.products.generated.rest.v1.dtos.UpdateProductInputRestDTO;
+import com.jeferro.products.generated.rest.v1.dtos.ProductVersionRestDTO;
+import com.jeferro.products.generated.rest.v1.dtos.ProductVersionSummaryListRestDTO;
+import com.jeferro.products.generated.rest.v1.dtos.UpdateProductVersionInputRestDTO;
 import com.jeferro.products.products.products.infrastructure.rest.mappers.ProductRestMapper;
 import com.jeferro.shared.ddd.application.bus.UseCaseBus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.time.Instant;
 import java.time.OffsetDateTime;
 
 @RestController
 @RequiredArgsConstructor
-public class ProductsRestController implements ProductsApi {
+public class ProductsRestController implements ProductVersionsApi {
 
     private final ProductRestMapper productRestMapper = ProductRestMapper.INSTANCE;
 
     private final UseCaseBus useCaseBus;
 
     @Override
-    public ProductSummaryListRestDTO searchProducts(Integer pageNumber, Integer pageSize,
-                                                      ProductFilterOrderRestDTO order,
-                                                      Boolean ascending,
-                                                      String name,
-                                                      OffsetDateTime searchDate) {
+    public ProductVersionSummaryListRestDTO searchProductVersions(Integer pageNumber, Integer pageSize, ProductFilterOrderRestDTO order,
+        Boolean ascending, String name, OffsetDateTime searchDate) {
         var params = productRestMapper.toSearchProductsParams(pageNumber, pageSize, order, ascending, name, searchDate);
 
         var products = useCaseBus.execute(params);
@@ -36,8 +32,11 @@ public class ProductsRestController implements ProductsApi {
     }
 
     @Override
-    public ProductRestDTO createProduct(CreateProductInputRestDTO createProductInputRestDTO) {
-        var params = productRestMapper.toCreateProductParams(createProductInputRestDTO);
+    public ProductVersionRestDTO createProductVersion(String productCode, String effectiveDate,
+        CreateProductVersionInputRestDTO createProductVersionInputRestDTO) {
+        var params = productRestMapper.toCreateProductParams(
+            productRestMapper.toDomain(productCode, effectiveDate),
+            createProductVersionInputRestDTO);
 
         var product = useCaseBus.execute(params);
 
@@ -45,8 +44,10 @@ public class ProductsRestController implements ProductsApi {
     }
 
     @Override
-    public ProductRestDTO getProduct(String productCode) {
-        var params = productRestMapper.toGetProductParams(productCode);
+    public ProductVersionRestDTO getProductVersion(String productCode, String effectiveDate) {
+        var params = productRestMapper.toGetProductParams(
+            productRestMapper.toDomain(productCode, effectiveDate)
+        );
 
         var product = useCaseBus.execute(params);
 
@@ -54,8 +55,11 @@ public class ProductsRestController implements ProductsApi {
     }
 
     @Override
-    public ProductRestDTO updateProduct(String productCode, UpdateProductInputRestDTO updateProductInputRestDTO) {
-        var params = productRestMapper.toUpdateProductParams(productCode, updateProductInputRestDTO);
+    public ProductVersionRestDTO updateProductVersion(String productCode, String effectiveDate,
+        UpdateProductVersionInputRestDTO updateProductVersionInputRestDTO) {
+        var params = productRestMapper.toUpdateProductParams(
+            productRestMapper.toDomain(productCode, effectiveDate),
+            updateProductVersionInputRestDTO);
 
         var user = useCaseBus.execute(params);
 
@@ -63,8 +67,10 @@ public class ProductsRestController implements ProductsApi {
     }
 
     @Override
-    public ProductRestDTO publishProduct(String productCode) {
-        var params = productRestMapper.toPublishProductParams(productCode);
+    public ProductVersionRestDTO publishProductVersion(String productCode, String effectiveDate) {
+        var params = productRestMapper.toPublishProductParams(
+            productRestMapper.toDomain(productCode, effectiveDate)
+        );
 
         var user = useCaseBus.execute(params);
 
@@ -72,8 +78,10 @@ public class ProductsRestController implements ProductsApi {
     }
 
     @Override
-    public ProductRestDTO unpublishProduct(String productCode) {
-        var params = productRestMapper.toUnpublishProductParams(productCode);
+    public ProductVersionRestDTO unpublishProductVersion(String productCode, String effectiveDate) {
+        var params = productRestMapper.toUnpublishProductParams(
+            productRestMapper.toDomain(productCode, effectiveDate)
+        );
 
         var user = useCaseBus.execute(params);
 
@@ -81,8 +89,10 @@ public class ProductsRestController implements ProductsApi {
     }
 
     @Override
-    public ProductRestDTO deleteProduct(String productCode) {
-        var params = productRestMapper.toDeleteProductParams(productCode);
+    public ProductVersionRestDTO deleteProductVersion(String productCode, String effectiveDate) {
+        var params = productRestMapper.toDeleteProductParams(
+            productRestMapper.toDomain(productCode, effectiveDate)
+        );
 
         var user = useCaseBus.execute(params);
 
